ios/chrome/app/spotlight/topsites_spotlight_manager.mm
@@ -94,7 +94,7 @@ class SpotlightTopSitesCallbackBridge
   explicit SpotlightTopSitesCallbackBridge(TopSitesSpotlightManager* owner)
       : owner_(owner) {}
 
-  SpotlightTopSitesCallbackBridge() {}
+  ~SpotlightTopSitesCallbackBridge() {}
 
   void OnMostVisitedURLsAvailable(const history::MostVisitedURLList& data) {
     [owner_ onMostVisitedURLsAvailable:data];
@@ -106,13 +106,15 @@ class SpotlightTopSitesCallbackBridge
 
 class SpotlightTopSitesBridge : public history::TopSitesObserver {
  public:
-  explicit SpotlightTopSitesBridge(TopSitesSpotlightManager* owner)
-      : owner_(owner) {
-    owner.topSites->AddObserver(this);
+  SpotlightTopSitesBridge(TopSitesSpotlightManager* owner,
+                          history::TopSites* top_sites)
+      : owner_(owner), top_sites_(top_sites) {
+    top_sites->AddObserver(this);
   };
 
   ~SpotlightTopSitesBridge() override {
-    owner_.topSites->RemoveObserver(this);
+    top_sites_->RemoveObserver(this);
+    top_sites_ = nullptr;
   };
 
   void TopSitesLoaded(history::TopSites* top_sites) override {}
@@ -124,6 +126,7 @@ class SpotlightTopSitesBridge : public history::TopSitesObserver {
 
  private:
   __weak TopSitesSpotlightManager* owner_;
+  history::TopSites* top_sites_;
 };
 
 class SpotlightSuggestionsBridge
@@ -132,7 +135,7 @@ class SpotlightSuggestionsBridge
   explicit SpotlightSuggestionsBridge(TopSitesSpotlightManager* owner)
       : owner_(owner) {}
 
-  SpotlightSuggestionsBridge() {}
+  ~SpotlightSuggestionsBridge() {}
 
   void OnSuggestionsProfileAvailable(
       const suggestions::SuggestionsProfile& suggestions_profile) {
@@ -171,7 +174,7 @@ initWithLargeIconService:(favicon::LargeIconService*)largeIconService
                                   domain:spotlight::DOMAIN_TOPSITES];
   if (self) {
     _topSites = topSites;
-    _topSitesBridge.reset(new SpotlightTopSitesBridge(self));
+    _topSitesBridge.reset(new SpotlightTopSitesBridge(self, _topSites.get()));
     _topSitesCallbackBridge.reset(new SpotlightTopSitesCallbackBridge(self));
     _bookmarkModel = bookmarkModel;
     _isReindexPending = false;
