ios/chrome/browser/ui/toolbar/tools_menu_button_observer_bridge.mm
@@ -64,6 +64,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 - (void)readingListModelBeingDeleted:(const ReadingListModel*)model {
   DCHECK(model == _model);
+  _modelBridge.reset();
   _model = nullptr;
 }
 
